# bookmark

./: Cargo.toml  EMBEDDINGS.md  README.md  config.yaml  embeddings.py
src/: main.rs
