[package]
name = "bookmark"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.3.19", features = ["derive", "string", "wrap_help"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.19"
scraper = "0.19.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
users = "0.11.0"
